@@ -228,11 +228,11 @@ peak.tests.MailModel  = importString('peak.storage.tests:xmi')
 
 
 [peak.running]
-signalManager = None    # default is no special handling
+# peak.running.signalManager is used while the standard MainLoop runs
+signalManager = None            # default is no special handling
 
-
-
-
+# This setting only affects the 'UntwistedReactor'
+reactor.checkInterval = 3600    # if no scheduled tasks, do 1 select/hour
 
 
 
