@@ -2,6 +2,10 @@ Fixes and Enhancements since Version 0.5 alpha 2
 
  Changed, Enhanced, or Newly Deprecated Features
 
+ - 'peak.running.scheduler.UntwistedReactor' now supports a configuration
+   property ('peak.running.reactor.checkInterval') to determine how long it
+   should run 'select()' calls for, when there are no scheduled tasks.
+ 
  - 'peak.running.scheduler.MainLoop' now supports using a "signal manager"
    component (via the 'peak.running.signalManager' property) to process signals
    while a 'run()' loop is in progress.  Signal managers can also be added or
